#102 fixed number of people shown on post card

--- a/src/app/material/post-card/post-card.component.html
+++ b/src/app/material/post-card/post-card.component.html
@@ -6,7 +6,7 @@
     <h1 class="post-subTitle">{{ postCard?.municipality?.name }}</h1>
     <div class="employees">
         <svg-icon src="/assets/img/icons/employees.svg" class="icon"></svg-icon>
-        <span class="number">{{ postCard?.jobs.length }}</span>
+        <span class="number">{{ postCard.totalPeople }}</span>
     </div>
 </div>
 <div class="body">
