#96 Footer terms and conditions (also updated register form links)

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -27,6 +27,34 @@
             fill: var(--color-white);
         }
     }
+
+    .legal-links {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 0.9em;        
+        
+        color: #ffffff;
+
+        .item {
+            text-decoration-line: underline;
+        }
+
+        .separator {
+            font-size: 1.5em;
+            margin-left: 3%;
+            margin-right: 3%;
+        }
+
+        a:visited {
+            color: #ffffff;
+        }
+    }
 }
 
 .tech4covid {
@@ -57,8 +85,21 @@
             }
         }
 
+        .legal-links {
+            flex-direction: column;
+            align-items: center;
+            margin-top: 20px;
+
+            .item {
+                margin-bottom: 15px;
+            }
+
+            .separator {
+                display:none;
+            }
+        }
+
         .social-links {
-            margin-top: 33px;
 
             .item {
                 margin: 10px;
@@ -104,8 +145,12 @@
             }
         }
 
-        .social-links {
+        .legal-links {
+            justify-content: center;
             margin-top: 45px;
+        }
+
+        .social-links {
 
             .item {
                 margin: 36px;
