--- a/src/app/screens/register/components/register-form/register-form.component.html
+++ b/src/app/screens/register/components/register-form/register-form.component.html
@@ -16,7 +16,7 @@
                 <app-checkbox
                     formControlName="checkbox"
                     [label]="
-                        'Concordo com os <a>Termos e Condições</a> assim como com a <a>Política de Privacidade</a> do serviço'
+                        'Concordo com os <a href=&quot;https://www.teamloan.pt/documents/terms-and-conditions.pdf&quot; target=&quot;_blank&quot;>Termos e Condições</a> assim como com a <a href=&quot;https://www.teamloan.pt/documents/privacy-policy.pdf&quot; target=&quot;_blank&quot;>Política de Privacidade</a> do serviço'
                     "
                 ></app-checkbox>
                 <div *ngIf="hasTermsError" class="error-message">
