--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,6 +4,13 @@
         <p class="label">Contacto:</p>
         <a href="mailto:geral@teamloan.pt" class="text">geral@teamloan.pt</a>
     </div>
+    <ul class="legal-links">
+        <li class="item"><a href="https://www.teamloan.pt/documents/terms-and-conditions.pdf" target="_blank">Termos do serviço</a>
+        </li>
+        <li class="separator">•</li>
+        <li class="item"><a href="https://www.teamloan.pt/documents/privacy-policy.pdf" target="_blank">Política de privacidade</a>
+        </li>
+    </ul>
     <ul class="social-links">
         <li class="item">
             <a href="https://www.linkedin.com/company/teamloan" target="_blank">
