--- a/src/app/material/utils/input-base.scss
+++ b/src/app/material/utils/input-base.scss
@@ -25,6 +25,6 @@
     &.disabled {
         border: none;
         background-color: transparent;
-        cursor: pointer;
+        cursor: default;
     }
 }
