--- a/src/app/material/button/button.component.scss
+++ b/src/app/material/button/button.component.scss
@@ -10,7 +10,7 @@
     text-align: center;
     width: 100%;
     padding: 0 20px;
-    border-color: var(--color-bittersweet);
+    border: 1px solid var(--color-bittersweet);
     outline: none;
     cursor: pointer;
 
