--- a/src/app/material/post-card/post-card.component.scss
+++ b/src/app/material/post-card/post-card.component.scss
@@ -9,10 +9,7 @@
     border-radius: 10px;
     overflow: hidden;
     background-color: var(--color-white);
-}
-
-a {
-    text-decoration: none;
+    cursor: pointer;
 }
 
 .header {
@@ -25,12 +22,12 @@ a {
 
     @include mobile {
         min-height: 78px;
-        padding: 0 110px 0 13px;
+        padding: 0 100px 0 13px;
     }
 
     @include tablet {
         min-height: 78px;
-        padding: 0 110px 0 13px;
+        padding: 0 100px 0 13px;
     }
 
     .cover-container {
@@ -56,13 +53,13 @@ a {
         z-index: 0;
 
         @include mobile {
-            font-size: 30px;
-            line-height: 35px;
+            font-size: 26px;
+            line-height: 24px;
         }
 
         @include tablet {
-            font-size: 30px;
-            line-height: 35px;
+            font-size: 26px;
+            line-height: 24px;
         }
     }
 
@@ -75,13 +72,13 @@ a {
         z-index: 0;
 
         @include mobile {
-            font-size: 19px;
-            line-height: 25px;
+            font-size: 18px;
+            line-height: 22px;
         }
 
         @include tablet {
-            font-size: 19px;
-            line-height: 25px;
+            font-size: 18px;
+            line-height: 22px;
         }
     }
 
@@ -156,6 +153,7 @@ a {
         font-weight: 600;
         color: var(--color-cosmic);
         max-width: 290px;
+        height: 45px;
 
         @include mobile {
             font-size: 20px;
