--- a/src/app/screens/equipas/components/job-form/job-form.component.scss
+++ b/src/app/screens/equipas/components/job-form/job-form.component.scss
@@ -12,18 +12,19 @@
 
 .input-job {
     display: flex;
-    flex: 3;
 
     @include mobile {
+        width: calc(60% - 5px);
         margin-right: 5px;
     }
 
     @include tablet {
+        width: calc(60% - 10px);
         margin-right: 10px;
     }
 }
 
 .input-quantity {
     display: flex;
-    flex: 2;
+    width: 40%;
 }
