--- a/src/app/screens/request-password-screen/component/request-password-screen.component.html
+++ b/src/app/screens/request-password-screen/component/request-password-screen.component.html
@@ -6,7 +6,7 @@
                 <app-input-text
                     formControlName="email"
                     type="text"
-                    placeholder="E-mail"
+                    placeholder="Email"
                 ></app-input-text>
                 <div *ngIf="submitted && emailControl?.errors?.required" class="error-message">
                     Campo obrigatório
@@ -24,11 +24,12 @@
 
         <div class="buttons-container">
             <app-button
-                label="Recuperar password"
+                label="Enviar email de recuperação de password"
                 type="submit"
                 [iconStatus]="submitting && buttonStatus"
                 class="button-submit"
             ></app-button>
         </div>
     </form>
+    <app-feedback [feedback]="successFeedback"></app-feedback>
 </div>
