#96 terms and conditions code review fix

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -36,8 +36,9 @@
         
         font-family: Roboto;
         font-style: normal;
-        font-weight: 500;
-        font-size: 0.9em;        
+        font-weight: 500;      
+        font-size: 14px;
+        line-height: 16px;
         
         color: #ffffff;
 
