--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,7 +7,7 @@
     <ul class="legal-links">
         <li class="item"><a href="https://www.teamloan.pt/documents/terms-and-conditions.pdf" target="_blank">Termos do serviço</a>
         </li>
-        <li class="separator">•</li>
+        <li class="separator">&#8226;</li>
         <li class="item"><a href="https://www.teamloan.pt/documents/privacy-policy.pdf" target="_blank">Política de privacidade</a>
         </li>
     </ul>
