--- a/src/app/screens/material-screen/material-screen.component.html
+++ b/src/app/screens/material-screen/material-screen.component.html
@@ -29,6 +29,7 @@
             class="column is-half-desktop"
             formControlName="selectBoxLarge"
             [inputSelectOptions]="inputSelectOptionsLarge"
+            emptyValueLabel="Box large empty value label"
             placeholder="Select box"
         ></app-input-select>
     </div>
