--- a/src/app/material/input-select/input-select.component.html
+++ b/src/app/material/input-select/input-select.component.html
@@ -1,6 +1,6 @@
 <div class="dropdown" [ngClass]="{ 'is-active': focus }">
     <select (change)="onSelectChange($event)">
-        <option [value]=""> - </option>
+        <option [value]=""> todos </option>
         <option *ngFor="let option of filteredOptions" [value]="option.key">
             {{ option.label }}
         </option>
@@ -24,7 +24,7 @@
         <div class="dropdown-content">
             <ul class="dropdown">
                 <li (click)="onOptionSelect()" class="dropdown-item empty-item">
-                    <span> - </span>
+                    <span> todos </span>
                 </li>
                 <li
                     *ngFor="let option of filteredOptions"
