--- a/src/app/screens/equipas/components/equipa-form/equipa-form.component.html
+++ b/src/app/screens/equipas/components/equipa-form/equipa-form.component.html
@@ -57,11 +57,10 @@
 
     <div class="fieldset">
         <h2 class="sub-title">Observações</h2>
-
-        <app-input-text
+        <app-input-textarea
+            class="textarea"
             formControlName="obs"
-            type="text"
             placeholder="Observações"
-        ></app-input-text>
+        ></app-input-textarea>
     </div>
 </form>
