--- a/src/app/screens/equipas/readonly-equipa/components/add-equipa-view/readonly-equipa-view.component.scss
+++ b/src/app/screens/equipas/readonly-equipa/components/add-equipa-view/readonly-equipa-view.component.scss
@@ -11,7 +11,7 @@
 
     .button {
         ::ng-deep {
-            .button {
+            .link {
                 height: 50px;
 
                 @include mobile {
