--- a/src/app/material/input-textarea/input-textarea.component.html
+++ b/src/app/material/input-textarea/input-textarea.component.html
@@ -5,4 +5,5 @@
     (change)="onUpdate($event)"
     (input)="onUpdate($event)"
     [attr.disabled]="formControl.disabled ? 'disabled' : null"
+    [ngClass]="{ disabled: formControl.disabled }"
 ></textarea>
