--- a/src/app/screens/equipas/edit-equipa/components/add-equipa-view/edit-equipa-view.component.html
+++ b/src/app/screens/equipas/edit-equipa/components/add-equipa-view/edit-equipa-view.component.html
@@ -1,10 +1,14 @@
 <h1 class="title">Editar Equipa</h1>
 <app-equipa-form-container [initialValue]="initialValue">
+    <div *ngIf="reponseError" class="error-message">
+        Ocorreu um erro, por favor tente novamente!
+    </div>
     <app-button
         class="button"
         type="button"
         size="fit"
         label="Gravar"
+        [iconStatus]="submitting ? buttonStatus.LOADING : ''"
         (click)="submit()"
     ></app-button>
     <!-- <app-button
