fix bad legal links

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,10 +5,10 @@
         <a href="mailto:geral@teamloan.pt" class="text">geral@teamloan.pt</a>
     </div>
     <ul class="legal-links">
-        <li class="item"><a href="https://www.teamloan.pt/assets/docs/terms-and-conditions.pdf" target="_blank">Termos do serviço</a>
+        <li class="item"><a href="/assets/docs/terms-and-conditions.pdf" target="_blank">Termos do serviço</a>
         </li>
         <li class="separator">&#8226;</li>
-        <li class="item"><a href="https://www.teamloan.pt/assets/docs/privacy-policy.pdf" target="_blank">Política de privacidade</a>
+        <li class="item"><a href="/assets/docs/privacy-policy.pdf" target="_blank">Política de privacidade</a>
         </li>
     </ul>
     <ul class="social-links">
