--- a/src/app/material/post-card/post-card.component.html
+++ b/src/app/material/post-card/post-card.component.html
@@ -1,4 +1,4 @@
-<div [routerLink]="[postCard?.url]">
+<a [routerLink]="[postCard?.url]">
     <div class="header">
         <div class="cover-container">
             <img class="cover" [src]="cover" />
@@ -55,4 +55,4 @@
             class="share"
         ></app-button>
     </div>
-</div>
+</a>
