#121 new button to add team on landing page

--- a/src/app/screens/home-screen/components/section-intro/section-intro.component.scss
+++ b/src/app/screens/home-screen/components/section-intro/section-intro.component.scss
@@ -150,7 +150,7 @@
     }
 }
 
-.auth-actions {
+.actions {
     display: flex;
     width: 100%;
 
@@ -186,8 +186,4 @@
             }
         }
     }
-}
-
-.main-actions {
-    width: 350px;
 }
