--- a/src/app/screens/home-screen/components/section-intro/section-intro.component.html
+++ b/src/app/screens/home-screen/components/section-intro/section-intro.component.html
@@ -10,12 +10,13 @@
                 ULTRAPASSARMOS OS DESAFIOS DO COVID-19.
             </h1>
         </div>
-        <div class="auth-actions" *ngIf="!isAuthenticated">
+        <div class="actions" *ngIf="!isAuthenticated">
             <app-button url="/login" label="Iniciar sessão"></app-button>
             <app-button url="/register" label="Criar nova conta" theme="secundary"></app-button>
         </div>
-        <div class="main-actions" *ngIf="isAuthenticated">
+        <div class="actions" *ngIf="isAuthenticated">
             <app-button url="/posts" label="Procurar equipa"></app-button>
+            <app-button url="/posts/add" label="Partilhar equipa"></app-button>
         </div>
     </div>
 </div>
