--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -144,6 +144,10 @@
 
     .menu-item,
     .auth-item {
+        @include tablet {
+            width: 107px;
+        }
+
         &:not(:last-child) {
             @include mobile {
                 margin-right: 20px;
