fix-detail-responsive

--- a/src/app/screens/posts/detail-equipa/components/detail-equipa-screen.component.scss
+++ b/src/app/screens/posts/detail-equipa/components/detail-equipa-screen.component.scss
@@ -68,6 +68,10 @@
         display: flex;
         width: 100%;
 
+        @include mobile {
+            flex-direction: column;
+        }
+
         @include tablet {
             margin-bottom: 54px;
         }
