--- a/src/app/components/cookies-notice/cookies-notice.component.scss
+++ b/src/app/components/cookies-notice/cookies-notice.component.scss
@@ -1,5 +1,5 @@
 .container {
-    position: absolute;
+    position: fixed;
     z-index: 1;
     width: 100%;
     left: 0px;
@@ -7,6 +7,7 @@
     background-color: rgba(255, 255, 255, 0.85);
     display: flex;
     align-items: center;
+    z-index: 9;
 
     .notice {
         flex: 1;
