--- a/src/app/components/posts-list/posts-list.component.scss
+++ b/src/app/components/posts-list/posts-list.component.scss
@@ -11,7 +11,6 @@
         flex-direction: column;
         align-items: center;
     }
-
     @include tablet {
         margin: 15px 50px;
     }
@@ -26,6 +25,10 @@
     @include mobile {
         display: flex;
         flex-direction: column;
+        margin-top: var(--grid-gap);
+        app-post-card {
+            margin-bottom: var(--grid-gap);
+        }
     }
 
     @include tablet {
