#111 added login error messages according to auth server reponse

--- a/src/app/screens/login-screen/component/login-screen.component.html
+++ b/src/app/screens/login-screen/component/login-screen.component.html
@@ -27,7 +27,7 @@
                 Campo obrigatório
             </div>
             <div *ngIf="submitted && loginError" class="error-message">
-                Verifique as suas credenciais
+              {{ loginErrorMessage }}
             </div>
         </fieldset>
     </div>
