#121 fix add team button route

--- a/src/app/screens/home-screen/components/section-intro/section-intro.component.html
+++ b/src/app/screens/home-screen/components/section-intro/section-intro.component.html
@@ -16,7 +16,7 @@
         </div>
         <div class="actions" *ngIf="isAuthenticated">
             <app-button url="/posts" label="Procurar equipa"></app-button>
-            <app-button url="/posts/add" label="Partilhar equipa"></app-button>
+            <app-button url="/posts/private/add" label="Partilhar equipa"></app-button>
         </div>
     </div>
 </div>
