--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -145,6 +145,8 @@
     .menu-item,
     .auth-item {
         @include tablet {
+            display: flex;
+            justify-content: center;
             width: 107px;
         }
 
@@ -154,7 +156,7 @@
             }
 
             @include tablet {
-                margin-right: 40px;
+                margin-right: 20px;
             }
         }
     }
