--- a/src/app/screens/posts/detail-equipa/components/detail-equipa-screen.component.scss
+++ b/src/app/screens/posts/detail-equipa/components/detail-equipa-screen.component.scss
@@ -176,14 +176,14 @@
     @include mobile {
         font-size: 14px;
         line-height: 16px;
-        height: 40px;
+        min-height: 40px;
         margin-bottom: 15px;
     }
 
     @include tablet {
         font-size: 18px;
         line-height: 22px;
-        height: 50px;
+        min-height: 50px;
         margin-bottom: 10px;
     }
 
