--- a/src/app/material/input-select/input-select.component.scss
+++ b/src/app/material/input-select/input-select.component.scss
@@ -100,7 +100,8 @@ select {
 }
 
 .dropdown-menu {
-    width: 100%;
+    min-width: 100%;
+    max-width: 150%;
     padding: 0;
     border: 1px solid var(--color-cosmic);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -128,8 +129,8 @@ select {
             padding: 0 10px;
             margin-left: 10px;
             outline: none;
-            font-size: 18px;
-            line-height: 21px;
+            font-size: 18px !important;
+            line-height: 21px !important;
             color: var(--color-black);
         }
     }
@@ -150,8 +151,9 @@ select {
         @include main-font-style();
         display: flex;
         align-items: center;
-        font-size: 18px;
-        line-height: 21px;
+        font-size: 18px !important;
+        line-height: 21px !important;
+
         color: var(--color-black);
         height: $itemHeightTablet;
         padding: 10px;
