--- a/src/app/material/input-select/input-select.component.scss
+++ b/src/app/material/input-select/input-select.component.scss
@@ -100,8 +100,7 @@ select {
 }
 
 .dropdown-menu {
-    min-width: 100%;
-    max-width: 150%;
+    width: 100%;
     padding: 0;
     border: 1px solid var(--color-cosmic);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -129,9 +128,22 @@ select {
             padding: 0 10px;
             margin-left: 10px;
             outline: none;
-            font-size: 18px !important;
-            line-height: 21px !important;
             color: var(--color-black);
+
+            @include mobile {
+                font-size: 15px;
+                line-height: 19px;
+            }
+
+            @include tablet {
+                font-size: 15px;
+                line-height: 19px;
+            }
+
+            @include desktop {
+                font-size: 15px;
+                line-height: 19px;
+            }
         }
     }
 
@@ -151,13 +163,25 @@ select {
         @include main-font-style();
         display: flex;
         align-items: center;
-        font-size: 18px !important;
-        line-height: 21px !important;
-
         color: var(--color-black);
         height: $itemHeightTablet;
         padding: 10px;
         cursor: pointer;
+
+        @include mobile {
+            font-size: 15px;
+            line-height: 19px;
+        }
+
+        @include tablet {
+            font-size: 15px;
+            line-height: 19px;
+        }
+
+        @include desktop {
+            font-size: 15px;
+            line-height: 19px;
+        }
 
         &.empty-item {
             text-align: center;
