--- a/src/app/material/post-card/post-card.component.scss
+++ b/src/app/material/post-card/post-card.component.scss
@@ -98,15 +98,13 @@
         align-items: center;
 
         @include mobile {
-            min-width: 81px;
-            max-width: 120px;
+            width: 81px;
             height: 103px;
             padding: 13px 0;
         }
 
         @include tablet {
-            min-width: 81px;
-            max-width: 120px;
+            width: 81px;
             height: 103px;
             padding: 13px 0;
         }
@@ -131,13 +129,23 @@
             color: var(--color-cosmic);
 
             @include mobile {
-                font-size: 60px;
+                font-size: 50px;
                 line-height: 70px;
             }
 
             @include tablet {
-                font-size: 60px;
+                font-size: 50px;
                 line-height: 70px;
+            }
+        }
+
+        &.large .number {
+            @include mobile {
+                font-size: 40px;
+            }
+
+            @include tablet {
+                font-size: 40px;
             }
         }
     }
