--- a/src/app/screens/posts/detail-equipa/components/detail-equipa-screen.component.scss
+++ b/src/app/screens/posts/detail-equipa/components/detail-equipa-screen.component.scss
@@ -181,14 +181,14 @@
     @include mobile {
         font-size: 14px;
         line-height: 16px;
-        min-height: 40px;
+        height: 40px;
         margin-bottom: 15px;
     }
 
     @include tablet {
         font-size: 18px;
         line-height: 22px;
-        min-height: 50px;
+        height: 50px;
         margin-bottom: 10px;
     }
 
