--- a/src/app/material/input-textarea/input-textarea.component.scss
+++ b/src/app/material/input-textarea/input-textarea.component.scss
@@ -1,6 +1,29 @@
-.input-field {
+@import '../utils/mixins';
+
+.textarea-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
     height: 100%;
     min-height: 140px;
-    padding: 20px;
-    resize: none;
+
+    .input-field {
+        width: 100%;
+        height: 100%;
+        resize: none;
+        padding: 20px;
+        border-color: transparent;
+        border-width: 3px;
+        box-shadow: 0 0 0 1px var(--color-cosmic);
+    }
+
+    .counter {
+        display: flex;
+        justify-content: flex-end;
+        font-size: 14px;
+        line-height: 16px;
+        color: var(--color-dove-gray);
+        margin-top: 5px;
+        margin-right: 5px;
+    }
 }
