resolving requested changes

--- a/src/app/screens/register/components/company-form/company-form.component.html
+++ b/src/app/screens/register/components/company-form/company-form.component.html
@@ -33,7 +33,7 @@
             Campo obrigatório
         </div>
         <div *ngIf="errors.postalCode.format" class="error-message">
-            Código postal inválido
+            Código postal inválido. Formato: XXXX-XXX
         </div>
 
         <p class="sub-title">Objetivo</p>
