--- a/src/app/screens/register/components/company-form/company-form.component.html
+++ b/src/app/screens/register/components/company-form/company-form.component.html
@@ -26,6 +26,7 @@
 
         <app-input-text
             formControlName="postalCode"
+            zipCode
             type="text"
             placeholder="Código postal"
         ></app-input-text>
