fixing validation fails when deleting hyphen in zip code mask

--- a/src/app/screens/register/components/company-form/company-form.component.html
+++ b/src/app/screens/register/components/company-form/company-form.component.html
@@ -27,6 +27,7 @@
         <app-input-text
             formControlName="postalCode"
             zipCode
+            [zipCodeFormControl]="form.get('postalCode')"
             type="text"
             placeholder="Código postal"
         ></app-input-text>
