updating request password

--- a/src/app/screens/request-password-screen/component/request-password-screen.component.html
+++ b/src/app/screens/request-password-screen/component/request-password-screen.component.html
@@ -1,6 +1,6 @@
 <div class="request-password-container">
     <h1 class="title">Recuperar password</h1>
-    <form [formGroup]="form" (submit)="onSubmit($event)">
+    <form [formGroup]="form" (submit)="onSubmit($event)" *ngIf="!requestSucceeded && !submitted">
         <div class="form-fields">
             <fieldset class="field-container">
                 <app-input-text
@@ -19,6 +19,9 @@
                 >
                     Email inválido
                 </div>
+                <div *ngIf="submitted && !requestSucceeded" class="error-message">
+                    {{ requestErrorMessage }}
+                </div>
             </fieldset>
         </div>
 
@@ -31,5 +34,5 @@
             ></app-button>
         </div>
     </form>
-    <app-feedback [feedback]="successFeedback"></app-feedback>
+    <app-feedback *ngIf="requestSucceeded && submitted" [feedback]="successFeedback"></app-feedback>
 </div>
