--- a/src/app/screens/register/components/company-form/company-form.component.html
+++ b/src/app/screens/register/components/company-form/company-form.component.html
@@ -27,7 +27,7 @@
         <app-input-text
             formControlName="postalCode"
             zipCode
-            [zipCodeFormControl]="form.get('postalCode')"
+            (zipCodeUpdateNeeded)="updateZipCode($event)"
             type="text"
             placeholder="Código postal"
         ></app-input-text>
