update reset passaword componenet (not finished)

--- a/src/app/screens/request-password-screen/component/request-password-screen.component.html
+++ b/src/app/screens/request-password-screen/component/request-password-screen.component.html
@@ -1,6 +1,6 @@
 <div class="request-password-container">
     <h1 class="title">Recuperar password</h1>
-    <form [formGroup]="form" (submit)="onSubmit($event)" *ngIf="!requestSucceeded && !submitted">
+    <form [formGroup]="form" (submit)="onSubmit()" *ngIf="!requestSucceeded || !submitted">
         <div class="form-fields">
             <fieldset class="field-container">
                 <app-input-text
