--- a/src/app/screens/reset-password-screen/reset-password-screen.component.html
+++ b/src/app/screens/reset-password-screen/reset-password-screen.component.html
@@ -1,1 +1,67 @@
-<p>reset-password-screen works!</p>
+<div class="reset-password-container">
+    <h1 class="title">Atualizar password</h1>
+    <h1 class="subtitle">{{ email }}</h1>
+    <h2 class="subtitle">{{ email }}</h2>
+    <h3 class="subtitle">{{ email }}</h3>
+
+    <form [formGroup]="form" (submit)="onSubmit()" *ngIf="!requestSucceeded || !submitted">
+        <div class="form-fields">
+            <fieldset class="field-container">
+                <label class="label" for="password">Nova password:</label>
+                <app-input-text
+                    formControlName="password"
+                    type="password"
+                    name="password"
+                    placeholder="Password"
+                ></app-input-text>
+                <div *ngIf="submitted && passwordControl.errors?.required" class="error-message">
+                    Campo obrigatório
+                </div>
+                <div
+                    *ngIf="!passwordControl.errors?.required && passwordControl.errors?.format"
+                    class="error-message"
+                >
+                    A password deve ter pelo menos 9 caracteres, incluindo uma letra maiúscula, uma
+                    minúscula, um número e um caractere especial
+                </div>
+            </fieldset>
+            <fieldset class="field-container">
+                <label class="label" for="confirmPassword">Confirme a nova password:</label>
+                <app-input-text
+                    formControlName="confirmPassword"
+                    type="password"
+                    name="confirmPassword"
+                    placeholder="Password"
+                ></app-input-text>
+                <div
+                    *ngIf="submitted && confirmPasswordControl?.errors?.required"
+                    class="error-message"
+                >
+                    Campo obrigatório
+                </div>
+                <div
+                    *ngIf="
+                        !confirmPasswordControl?.errors?.required &&
+                        confirmPasswordControl.errors?.different
+                    "
+                    class="error-message"
+                >
+                    Passwords diferentes
+                </div>
+            </fieldset>
+        </div>
+
+        <div class="buttons-container">
+            <div *ngIf="submitted && !requestSucceeded" class="error-message">
+                {{ requestErrorMessage }}
+            </div>
+            <app-button
+                label="Atualizar password"
+                type="submit"
+                [iconStatus]="submitting && buttonStatus"
+                class="button-submit"
+            ></app-button>
+        </div>
+    </form>
+    <app-feedback *ngIf="requestSucceeded && submitted" [feedback]="successFeedback"></app-feedback>
+</div>
