new wraper componenet

--- a/src/app/screens/material-screen/material-screen.component.html
+++ b/src/app/screens/material-screen/material-screen.component.html
@@ -15,7 +15,9 @@
             placeholder="Password"
         ></app-input-text>
     </div>
-
+    <p>ZipCode:</p>
+    <app-input-zip-code (controlName)="(postalCode)"></app-input-zip-code>
+    <hr />
     <h1>InputSelectComponent</h1>
     <div class="columns is-desktop">
         <app-input-select
