--- a/src/app/screens/register/components/company-form/company-form.component.html
+++ b/src/app/screens/register/components/company-form/company-form.component.html
@@ -24,6 +24,8 @@
             Campo obrigatório
         </div>
 
+        <app-input-zip-code></app-input-zip-code>
+
         <app-input-text
             formControlName="postalCode"
             zipCode
