updating service and css

--- a/src/app/screens/reset-password-screen/reset-password-screen.component.html
+++ b/src/app/screens/reset-password-screen/reset-password-screen.component.html
@@ -1,9 +1,6 @@
 <div class="reset-password-container">
     <h1 class="title">Atualizar password</h1>
     <h1 class="subtitle">{{ email }}</h1>
-    <h2 class="subtitle">{{ email }}</h2>
-    <h3 class="subtitle">{{ email }}</h3>
-
     <form [formGroup]="form" (submit)="onSubmit()" *ngIf="!requestSucceeded || !submitted">
         <div class="form-fields">
             <fieldset class="field-container">
@@ -21,8 +18,8 @@
                     *ngIf="!passwordControl.errors?.required && passwordControl.errors?.format"
                     class="error-message"
                 >
-                    A password deve ter pelo menos 9 caracteres, incluindo uma letra maiúscula, uma
-                    minúscula, um número e um caractere especial
+                    A password deve ter pelo menos 9 caracteres, incluindo uma letra maiúscula,
+                    <br />uma minúscula, um número e um caractere especial
                 </div>
             </fieldset>
             <fieldset class="field-container">
@@ -41,7 +38,7 @@
                 </div>
                 <div
                     *ngIf="
-                        !confirmPasswordControl?.errors?.required &&
+                        !confirmPasswordControl.errors?.required &&
                         confirmPasswordControl.errors?.different
                     "
                     class="error-message"
