--- a/src/app/screens/reset-password-screen/reset-password-screen.component.scss
+++ b/src/app/screens/reset-password-screen/reset-password-screen.component.scss
@@ -60,8 +60,26 @@
             margin-bottom: 30px;
         }
     }
-
     @include tablet {
         margin-bottom: 87px;
+    }
+}
+
+.subtitle {
+    font-family: Work Sans;
+    font-style: normal;
+    font-weight: bold;
+    color: var(--color-white);
+    text-align: center;
+    margin: 16px;
+
+    @include mobile {
+        font-size: 22px;
+        line-height: 26px;
+    }
+
+    @include tablet {
+        font-size: 30px;
+        line-height: 55px;
     }
 }
