resolving some PR conversations

--- a/src/app/screens/login-screen/component/login-screen.component.html
+++ b/src/app/screens/login-screen/component/login-screen.component.html
@@ -27,12 +27,12 @@
                 Campo obrigatório
             </div>
             <div *ngIf="submitted && loginError" class="error-message">
-              {{ loginErrorMessage }}
+                {{ loginErrorMessage }}
             </div>
         </fieldset>
     </div>
 
-    <a class="forgot-password" href="#/request-password">Esqueceu-se da password?</a>
+    <a class="forgot-password" [routerLink]="['/request-password']">Esqueceu-se da password?</a>
 
     <div class="buttons-container">
         <app-button
