--- a/src/app/screens/request-password-screen/component/request-password-screen.component.scss
+++ b/src/app/screens/request-password-screen/component/request-password-screen.component.scss
@@ -1,4 +1,5 @@
 @import 'bulma/sass/utilities/_all';
+@import 'src/assets/scss/core/_variables';
 
 .request-password-container {
     margin: 5%;
@@ -32,7 +33,8 @@
     background-size: cover;
 
     @include tablet {
-        min-height: 100vh;
+        min-height: calc(100vh - #{$headerDesktopHeight});
+        height: 100%;
     }
 }
 
