updating match validator and resolving more PR conversations

--- a/src/app/screens/request-password-screen/component/request-password-screen.component.scss
+++ b/src/app/screens/request-password-screen/component/request-password-screen.component.scss
@@ -2,7 +2,7 @@
 @import 'src/assets/scss/core/_variables';
 
 .request-password-container {
-    margin: 5%;
+    margin: 0px 20px 30px 20px;
 }
 
 .label {
