--- a/src/app/screens/reset-password-screen/reset-password-screen.component.html
+++ b/src/app/screens/reset-password-screen/reset-password-screen.component.html
@@ -38,7 +38,7 @@
                 <div
                     *ngIf="
                         !confirmPasswordControl.errors?.required &&
-                        confirmPasswordControl.errors?.different
+                        confirmPasswordControl.errors?.match
                     "
                     class="error-message"
                 >
