--- a/src/app/components/posts-list/posts-list.component.html
+++ b/src/app/components/posts-list/posts-list.component.html
@@ -1,6 +1,6 @@
 <app-filter-toolbar
     class="filter-container"
-    [intentToggle]="false"
+    [intentToggle]="true"
     [districtOptions]="districtOptions"
     [municipalityOptions]="municipalityOptions"
     [sectorOptions]="businessAreaOptions"
