--- a/src/app/screens/posts/edit-equipa/components/add-equipa-view/edit-equipa-view.component.html
+++ b/src/app/screens/posts/edit-equipa/components/add-equipa-view/edit-equipa-view.component.html
@@ -1,4 +1,4 @@
-<h1 class="title">Editar Equipa</h1>
+<h1 class="title">Editar publicação</h1>
 <app-equipa-form-container [initialValue]="initialValue">
     <div *ngIf="reponseError" class="error-message">
         Ocorreu um erro, por favor tente novamente!
