--- a/src/app/material/filter-toolbar/filter-toolbar.component.scss
+++ b/src/app/material/filter-toolbar/filter-toolbar.component.scss
@@ -30,11 +30,25 @@
                 }
             }
 
+            @include mobile {
+                ::ng-deep .button {
+                    font-size: 16px;
+                    line-height: 19px;
+                    height: 50px;
+                }
+            }
+
             @include tablet {
                 flex-direction: column;
 
                 app-button.filter-component {
                     padding: 0.75rem 15%;
+
+                    ::ng-deep .button {
+                        font-size: 15px;
+                        line-height: 18px;
+                        height: 50px;
+                    }
                 }
             }
 
