--- a/src/app/screens/posts/detail-equipa/components/detail-equipa-screen.component.scss
+++ b/src/app/screens/posts/detail-equipa/components/detail-equipa-screen.component.scss
@@ -165,11 +165,7 @@
         margin-bottom: 3px;
     }
 }
-.job-name {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
+
 .input-field {
     display: flex;
     align-items: center;
@@ -178,23 +174,24 @@
     border: 1px solid var(--color-black);
     border-radius: 10px;
 
+    span {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
     @include mobile {
-        font-size: 14px;
-        line-height: 16px;
+        font-size: 12px;
+        line-height: 14px;
         height: 40px;
         margin-bottom: 15px;
     }
 
     @include tablet {
-        font-size: 18px;
-        line-height: 22px;
+        font-size: 15px;
+        line-height: 18px;
         height: 50px;
         margin-bottom: 10px;
-    }
-
-    @include desktop {
-        font-size: 22px;
-        line-height: 26px;
     }
 
     &.textarea {
