updating some CSS

--- a/src/app/screens/request-password-screen/component/request-password-screen.component.scss
+++ b/src/app/screens/request-password-screen/component/request-password-screen.component.scss
@@ -5,6 +5,26 @@
     margin: 0px 20px 30px 20px;
 }
 
+.subtitle {
+    font-family: Work Sans;
+    font-style: normal;
+    font-weight: 300;
+    color: var(--color-white);
+    text-align: center;
+
+    @include mobile {
+        font-size: 22px;
+        line-height: 26px;
+        margin: 16px 16px 33px 16px;
+    }
+
+    @include tablet {
+        font-size: 30px;
+        line-height: 55px;
+        margin: 16px 16px 87px 16px;
+    }
+}
+
 .label {
     display: block;
     font-family: Work Sans;
@@ -57,13 +77,22 @@
 }
 
 .buttons-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     @include mobile {
         app-button {
+            width: 151px;
             margin-bottom: 30px;
         }
     }
 
     @include tablet {
-        margin-bottom: 87px;
+        app-button {
+            width: 245px;
+            margin-bottom: 87px;
+            margin-top: 48px;
+        }
     }
 }
