--- a/src/app/screens/reset-password-screen/reset-password-screen.component.scss
+++ b/src/app/screens/reset-password-screen/reset-password-screen.component.scss
@@ -1,7 +1,7 @@
 @import 'bulma/sass/utilities/_all';
 
 .reset-password-container {
-    margin: 5%;
+    margin: 0px 20px 30px 20px;
 }
 
 .label {
@@ -55,31 +55,21 @@
 }
 
 .buttons-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     @include mobile {
         app-button {
+            width: 151px;
             margin-bottom: 30px;
         }
     }
     @include tablet {
-        margin-bottom: 87px;
-    }
-}
-
-.subtitle {
-    font-family: Work Sans;
-    font-style: normal;
-    font-weight: bold;
-    color: var(--color-white);
-    text-align: center;
-    margin: 16px;
-
-    @include mobile {
-        font-size: 22px;
-        line-height: 26px;
-    }
-
-    @include tablet {
-        font-size: 30px;
-        line-height: 55px;
+        app-button {
+            width: 245px;
+            margin-bottom: 87px;
+            margin-top: 48px;
+        }
     }
 }
