--- a/src/app/screens/request-password-screen/component/request-password-screen.component.html
+++ b/src/app/screens/request-password-screen/component/request-password-screen.component.html
@@ -1,5 +1,8 @@
 <div class="request-password-container">
-    <h1 class="title">Recuperar password</h1>
+    <h1 class="title">Esqueceu-se da password?</h1>
+    <h2 class="subtitle" *ngIf="!requestSucceeded || !submitted">
+        Insira o seu email para redefinir a sua password.
+    </h2>
     <form [formGroup]="form" (submit)="onSubmit()" *ngIf="!requestSucceeded || !submitted">
         <div class="form-fields">
             <fieldset class="field-container">
@@ -27,7 +30,7 @@
 
         <div class="buttons-container">
             <app-button
-                label="Enviar email de recuperação de password"
+                label="Enviar email"
                 type="submit"
                 [iconStatus]="submitting && buttonStatus"
                 class="button-submit"
