--- a/src/app/screens/reset-password-screen/reset-password-screen.component.html
+++ b/src/app/screens/reset-password-screen/reset-password-screen.component.html
@@ -3,7 +3,7 @@
     <form [formGroup]="form" (submit)="onSubmit()" *ngIf="!requestSucceeded || !submitted">
         <div class="form-fields">
             <fieldset class="field-container">
-                <label class="label" for="password">Nova password:</label>
+                <label class="label" for="password">Password</label>
                 <app-input-text
                     formControlName="password"
                     type="password"
@@ -22,7 +22,7 @@
                 </div>
             </fieldset>
             <fieldset class="field-container">
-                <label class="label" for="confirmPassword">Confirme a nova password:</label>
+                <label class="label" for="confirmPassword">Repetir password</label>
                 <app-input-text
                     formControlName="confirmPassword"
                     type="password"
@@ -52,7 +52,7 @@
                 {{ requestErrorMessage }}
             </div>
             <app-button
-                label="Atualizar password"
+                label="Gravar"
                 type="submit"
                 [iconStatus]="submitting && buttonStatus"
                 class="button-submit"
