--- a/src/app/components/feedback/feedback.component.scss
+++ b/src/app/components/feedback/feedback.component.scss
@@ -33,11 +33,13 @@
             flex-direction: column;
             align-items: center;
             text-align: center;
+            padding: 0px 10px;
         }
 
         @include tablet {
             justify-content: center;
             align-items: center;
+            padding: 0px 20px;
         }
 
         .header-text {
