--- a/src/app/screens/reset-password-screen/reset-password-screen.component.scss
+++ b/src/app/screens/reset-password-screen/reset-password-screen.component.scss
@@ -1,4 +1,5 @@
 @import 'bulma/sass/utilities/_all';
+@import 'src/assets/scss/core/_variables';
 
 .reset-password-container {
     margin: 0px 20px 30px 20px;
@@ -32,7 +33,8 @@
     background-size: cover;
 
     @include tablet {
-        min-height: 100vh;
+        min-height: calc(100vh - #{$headerDesktopHeight});
+        height: 100%;
     }
 }
 
@@ -56,6 +58,7 @@
 
 .buttons-container {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 
@@ -69,7 +72,7 @@
         app-button {
             width: 245px;
             margin-bottom: 87px;
-            margin-top: 48px;
         }
+        margin-top: 48px;
     }
 }
