--- a/src/app/material/button/button.component.html
+++ b/src/app/material/button/button.component.html
@@ -6,6 +6,7 @@
     class="link"
     *ngIf="url && !externalUrl"
     [routerLink]="[url]"
+    [queryParams]="queryParams"
     [attr.theme]="theme"
     [attr.size]="size"
 >
